# dns-serializer

./: .gitignore  CMakeLists.txt  README.md  main.cc
include/dnssaver/: dnssaver.h
src/: bintotext.cc  copyfile.cc  data.cc  filetype.cc  texttobin.cc
test/: input_default.txt  input_large.txt  test.sh
